--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>quadcore.eightpuzzle.view.HelloApplication</mainClass>
+                            <mainClass>quadcore.eightpuzzle.view.EightPuzzleApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
