--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-# initialize root logger with level ERROR for stdout and fout
+# initialize root logger with level INFO for stdout and fout
 log4j.rootLogger=INFO,stdout,fout
 # set the log level for these components
 log4j.logger.com.endeca=INFO
@@ -15,5 +15,6 @@ log4j.appender.fout=org.apache.log4j.FileAppender
 # create a log file
 log4j.appender.fout.File=search.log
 log4j.appender.fout.layout=org.apache.log4j.PatternLayout
+log4j.appender.fout.Append=false
 # use a more detailed message pattern
 log4j.appender.fout.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
