--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
-# initialize root logger with level INFO for stdout and fout
-log4j.rootLogger=INFO,stdout,fout
+# initialize root logger with level DEBUG for stdout and fout
+log4j.rootLogger=DEBUG,stdout,fout
 # set the log level for these components
 log4j.logger.com.endeca=INFO
 log4j.logger.com.endeca.itl.web.metrics=INFO
